update plugin to 0.2.1 version (release)